# crypto_manager

./: .gitignore  Crypto_manager.py  coin_db.db  config.json  db.py  gui_config.py  media_downloader.py  pack.txt  parser.py  pyproject.toml  pytest.ini  requirements.txt  settings.py
src/: Crypto_manager.py  app.py  parser.py  requirements.txt  settings.py
src/db/: common.py  config.py  db.py  models.py
src/parser/: common.py  parser.py
tests/: test_db.py
