[tool.poetry]
name = "crypto-manager"
version = "0.1.0"
description = ""
authors = ["sayrekas <chaotichoice@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.36"
loguru = "^0.7.2"
pydantic = "^2.9.2"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
